--- a/project_01_movies_trailers/code/styles/main.css
+++ b/project_01_movies_trailers/code/styles/main.css
@@ -1,63 +1,105 @@
 body {
-    padding-top: 80px;
+  background-color: #000;
+  padding-top: 80px;
 }
+
+h2.movie-title {
+  font-size: 1.2em;
+}
+
 #trailer .modal-dialog {
-    margin-top: 200px;
-    width: 640px;
-    height: 480px;
+  margin-top: 200px;
+  width: 640px;
+  height: 480px;
 }
+
 .hanging-close {
-    position: absolute;
-    top: -12px;
-    right: -12px;
-    z-index: 9001;
+  position: absolute;
+  top: -12px;
+  right: -12px;
+  z-index: 9001;
 }
+
 #trailer-video {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
+
+.movie-list {
+  -moz-animation-duration: 3s;
+  -webkit-animation-duration: 3s;
+  animation-duration: 3s;
+  -moz-animation-name: intro;
+  -webkit-animation-name: intro;
+  animation-name: intro;
+  display: block;
+  list-style: none;
+  padding-left: 0;
+}
+
 .movie-tile {
-    margin-bottom: 20px;
-    padding-top: 20px;
+  -webkit-transition: opacity ease-out 300ms;
+  -moz-transition: opacity ease-out 300ms;
+  -o-transition: opacity ease-out 300ms;
+  transition: opacity ease-out 300ms;
+  float: left;
+  margin-bottom: 20px;
+  opacity: 0.5;
+  padding-top: 20px;
 }
+
 .movie-tile:hover {
-    background-color: #EEE;
-    cursor: pointer;
+  -webkit-transition: opacity ease-out 300ms;
+  -moz-transition: opacity ease-out 300ms;
+  -o-transition: opacity ease-out 300ms;
+  transition: opacity ease-out 300ms;
+  cursor: pointer;
+  opacity: 1;
 }
+
+.movie-tile a {
+  color: #666;
+  text-decoration: none;
+}
+
+.movie-tile img {
+  display: block;
+  margin: auto;
+}
+
 .scale-media {
-    padding-bottom: 56.25%;
-    position: relative;
+  padding-bottom: 56.25%;
+  position: relative;
 }
+
 .scale-media iframe {
-    border: none;
-    height: 100%;
-    position: absolute;
-    width: 100%;
-    left: 0;
-    top: 0;
-    background-color: white;
+  border: none;
+  height: 100%;
+  position: absolute;
+  width: 100%;
+  left: 0;
+  top: 0;
+  background-color: white;
 }
 
-div.movie-details h3 {
-    font-size: 1em;
-    float: left;
-    line-height: 20px;
-    margin-right: 10px;
-    margin-top: 0;
+
+.actors-list {
+  list-style: none;
 }
 
-ul.actors-list {
-    list-style: none;
+.actors-list li {
+  float: left;
 }
 
-ul.actors-list li {
-    float: left;
-}
-
-ul.actors-list li:first-child {
-    margin-left: 0;
+.actors-list li:first-child {
+  margin-left: 0;
 }
 
 .actor-tile {
-    margin-left: 10px;
+  margin-left: 10px;
+}
+
+@keyframes intro {
+  from { opacity: 0; }
+  to { opacity: 1; }
 }
