feat: Added a working popover with movie info

--- a/project_01_movies_trailers/code/styles/main.css
+++ b/project_01_movies_trailers/code/styles/main.css
@@ -99,6 +99,10 @@ h2.movie-title {
   margin-left: 10px;
 }
 
+.popover {
+    z-index: 1000; /* A value higher than 1010 that solves the problem */
+}
+
 @keyframes intro {
   from { opacity: 0; }
   to { opacity: 1; }
